css and file updates

--- a/index.html
+++ b/index.html
@@ -10,12 +10,29 @@
 <body>
     <header>
         <nav>
-            <a href="index.html">Home</a> | 
-            <a href="about.html"> About</a> |
-            <a href="Resume.pdf"> Resume</a> |
+            <a href="index.html">Home</a> 
+            <a href="about.html"> About</a> 
+            <a href="Resume.pdf"> Resume</a> 
             <a href="mailto:lamoure6@msu.edu"> Contact</a>
         </nav>
     </header>
+    <h1>
+        <span class = "hi-there">Hi there.</span><br>
+        I'm <span class="name">Danielle Lamoureux</span> -<br>
+        Designer, Programmer, <span class="creative-thinker">Creative Thinker</span>
+    </h1>
+    <div class="intro-home">
+        <p>
+            Currently an aspiring designer and senior at Michigan State University 
+            with interests including Product Design, UX/UI Design, Visual Design, and 
+            prototyping. Most recently a Product Design Intern at Ford Motor Co. and 
+            Graphic Designer for MSU Engineering K-12 Outreach.
+        </p>
+        <a href="">Check Out My Work &#x21E9;</a>
+    </div>
+    <div class = "work">
+        
+    </div>
     
 </body>
 </html>
