--- a/about.html
+++ b/about.html
@@ -10,9 +10,9 @@
 <body>
     <header>
         <nav>
-            <a href="index.html">Home</a> | 
-            <a href="about.html"> About</a> |
-            <a href="Resume.pdf"> Resume</a> |
+            <a href="index.html">Home</a> 
+            <a href="about.html"> About</a> 
+            <a href="Resume.pdf"> Resume</a> 
             <a href="mailto:lamoure6@msu.edu"> Contact</a>
         </nav>
     </header>
